refactor(money-input): label only disabled style

--- a/inputs/money-input/money-input.mod.css
+++ b/inputs/money-input/money-input.mod.css
@@ -140,6 +140,12 @@
   background-color: var(--color-whiteCatskill);
 }
 
+.disabled-currency-label {
+  background-color: var(--color-whiteCatskill);
+  border-color: var(--color-greyMischka);
+  color: var(--color-greyNevada);
+}
+
 .currency {
   display: flex;
   align-items: center;
