feat(uikit): add primary tone to text

--- a/typography/text/text.mod.css
+++ b/typography/text/text.mod.css
@@ -75,6 +75,10 @@ small {
   font-weight: bold;
 }
 
+.primary {
+  color: var(--color-primaryGreen);
+}
+
 .secondary {
   color: var(--color-secondaryGrey);
 }
