feat(discounts/cart): add dodgerBlue color

--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -6,6 +6,7 @@ colors. */
 :root {
   /* Blues */
   --color-blue: #0679d1;
+  --color-dodgerBlue: #0d9df8;
   --color-blueNavy: #213e48;
   --color-purple: #bd72ff;
 
