--- a/table/sortable-header/sortable-header.mod.css
+++ b/table/sortable-header/sortable-header.mod.css
@@ -8,7 +8,7 @@
 .arrow {
   visibility: hidden; /* use visibility so react-virtualized can account for arrow-width on calcs */
   pointer-events: none; /* Do not unhover when on the icon */
-  padding-left: var(--spacing-4);
+  padding: 0 0 0 var(--spacing-16);
 }
 
 .active .arrow {
@@ -25,4 +25,8 @@
 
 .reversed {
   flex-direction: row-reverse;
+}
+
+.reversed .arrow {
+  padding: 0 var(--spacing-16) 0 0;
 }
