--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -35,7 +35,7 @@
 }
 
 /* FIXME: this is supposed to fix a bug in Chrome with position: sticky in
-       low-DPI screens. Once the bug is fixed, please remove this. */
+       low-DPI screens. Once the bug is fixed, please remove this. (https://goo.gl/GVcJXf) */
 @media only screen and (-webkit-max-device-pixel-ratio: 1) {
   .sticky {
     top: calc(var(--spacing-16) * -1);
