--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -102,7 +102,7 @@
 }
 
 .header-icon-urgent {
-  background-color: var(--color-orange);
+  background-color: var(--new-color-orange);
 }
 
 .content {
