--- a/inputs/money-numeric-input/money-numeric-input.mod.css
+++ b/inputs/money-numeric-input/money-numeric-input.mod.css
@@ -41,12 +41,12 @@
 
 .warning {
   composes: input;
-  color: var(--color-orange);
-  border-color: var(--color-orange);
+  color: var(--new-color-orange);
+  border-color: var(--new-color-orange);
 }
 
 .error {
   composes: input;
-  color: var(--color-red);
-  border-color: var(--color-red);
+  color: var(--new-color-red);
+  border-color: var(--new-color-red);
 }
