--- a/label/label.mod.css
+++ b/label/label.mod.css
@@ -1,14 +1,14 @@
 @import '../materials/colors.mod.css';
 
 .tone-critical {
-  background-color: color(var(--color-red) alpha(15%));
-  border: 1px solid var(--color-red);
+  background-color: var(--new-color-red-95);
+  border: 1px solid var(--new-color-red);
   border-radius: 2px;
 }
 
 .tone-warning {
-  background-color: color(var(--color-orange) alpha(15%));
-  border: 1px solid var(--color-orange);
+  background-color: color(var(--new-color-orange) alpha(15%));
+  border: 1px solid var(--new-color-orange);
   border-radius: 2px;
 }
 
@@ -19,8 +19,8 @@
 }
 
 .tone-information {
-  background-color: color(var(--color-blue) alpha(15%));
-  border: 1px solid var(--color-blue);
+  background-color: var(--new-color-blue-95);
+  border: 1px solid var(--new-color-blue);
   border-radius: 2px;
 }
 
