--- a/table/table.mod.css
+++ b/table/table.mod.css
@@ -21,7 +21,7 @@
 
 .checkbox-cell {
   background-color: #f2f2f2;
-  border-left: 2px solid var(--color-blue);
+  border-left: 2px solid var(--new-color-blue);
 }
 
 .checkbox-cell:hover {
