--- a/buttons/primary-button/primary-button.mod.css
+++ b/buttons/primary-button/primary-button.mod.css
@@ -49,17 +49,17 @@
 
 /** primary tone */
 .button-tone-primary .button {
-  background-color: var(--color-buttonPrimary);
+  background-color: var(--new-color-green-25);
 }
 
 .button-tone-primary .active:hover,
 .button-tone-primary .button:hover {
-  background-color: var(--color-greenDowny);
+  background-color: var(--new-color-green);
 }
 
 .button-tone-primary .active,
 .button-tone-primary .button:active {
-  background-color: var(--color-buttonPrimary);
+  background-color: var(--new-color-green-25);
 }
 
 /** urgent tone */
@@ -69,7 +69,7 @@
 
 .button-tone-urgent .active:hover,
 .button-tone-urgent .button:hover {
-  background-color: var(--color-greenDowny);
+  background-color: var(--new-color-green);
 }
 
 .button-tone-urgent .active,
