--- a/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/panels/collapsible-panel/collapsible-panel.mod.css
@@ -98,7 +98,7 @@
 }
 
 .header-icon-primary {
-  background-color: var(--color-greenLight);
+  background-color: var(--new-color-green-25);
 }
 
 .header-icon-urgent {
