--- a/buttons/flat-button/flat-button.mod.css
+++ b/buttons/flat-button/flat-button.mod.css
@@ -18,11 +18,11 @@
 /* Set the colors for the different interactions by selecting the `p` element, rendered by `<Text.Body>` */
 
 .primary p {
-  color: var(--color-primaryGreen);
+  color: var(--new-color-green-25);
 }
 
 .primary:hover p {
-  color: var(--color-greenDowny);
+  color: var(--new-color-green);
 }
 
 .secondary p {
