--- a/date-picker/date-picker-body.mod.css
+++ b/date-picker/date-picker-body.mod.css
@@ -46,7 +46,7 @@
 }
 
 .date-input:focus {
-  border: 1px solid var(--color-primaryGreen);
+  border: 1px solid var(--new-color-green);
   transition: var(--transition-standard);
 }
 
