--- a/inputs/number-input/number-input.mod.css
+++ b/inputs/number-input/number-input.mod.css
@@ -83,6 +83,6 @@
 
 .pristine:active,
 .pristine:focus {
-  border-color: var(--color-greenDowny);
+  border-color: var(--new-color-green-25);
   color: var(--color-black);
 }
